--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "vue": "latest",
     "vue-router": "latest"
   },
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
+  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
+    "autoprefixer": "^10.4.20",
+    "nodemailer": "^6.9.15",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
+  }
 }
